fixed problems with flicker CellAdder

--- a/src/components/CellAdder.css
+++ b/src/components/CellAdder.css
@@ -2,6 +2,7 @@
   position: relative;
   opacity: 0;
   transition: 0.3s ease-in 0.1s;
+  margin: 10px 0;
 }
 
 .cell-adder:hover {
